--- a/src/main/webapp/resources/css/store.css
+++ b/src/main/webapp/resources/css/store.css
@@ -1,11 +1,14 @@
 @charset "UTF-8";
-
 /* 공통 */
 body {
     background-color: #f4f4f4;
     font-family: 'Roboto', 'Noto Sans KR', sans-serif;
     color: #222;
     display: flex;
+}
+.color-box {
+    background: #FFB100;
+    border-radius: 16px;
 }
 
 /* 헤더 */
@@ -79,19 +82,12 @@ header .head .nav-container .nav-item button:hover {
     overflow: hidden;
     object-fit: cover;
 }
-.profile .name {
+.profile .account {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 700;
-    font-size: 26px;
+    font-size: 25px;
     margin-bottom: 10px;
     text-align: center;
-}
-.profile .account {
-    font-weight: 400;
-    font-size: 18px;
-    color: #bbb;
-    text-align: center;
-    margin-bottom: 15px;
 }
 .profile .point-container {
     display: flex;
@@ -147,21 +143,37 @@ header .head .nav-container .nav-item button:hover {
     margin: 0 20px;
     width: 35px;
 }
-.profile .category a .color {
-    background: #FFB100;
-    border-radius: 16px;
+.profile .category .btn-container {
+    width: 340px;
+    display: flex;
+    justify-content: space-between;
 }
-.profile .category a .add-point {
-    background: #FFB100;
-    border-radius: 50px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+.profile .category .btn-container a .btn {
+    width: 140px;
+    height: 60px;
+    padding: 0 10px;
+    background-color: #ffb100;
     border: 2px solid #ffb100;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: .5s;
 }
-.profile .category a .add-point:hover {
-    background: #fff;
+.profile .category .btn-container a .btn:hover {
+    background: transparent;
     border: 2px solid #ffb100;
 }
+.profile .category .btn-container a .btn img {
+    width: 30px;
+    margin-right: 5px;
+}
+.profile .category .btn-container a .btn span {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+}
+
 
 
 /* 컨텐츠 */
@@ -221,7 +233,24 @@ header .head .nav-container .nav-item button:hover {
     display: none;
     cursor: pointer;
 }
-
+.main .item-container .item:nth-child(1) .item-image {
+    background-color: #FF7878;
+}
+.main .item-container .item:nth-child(2) .item-image {
+    background-color: #FFE978;
+}
+.main .item-container .item:nth-child(3) .item-image {
+    background-color: #8BFF78;
+}
+.main .item-container .item:nth-child(4) .item-image {
+    background-color: #78FFCE;
+}
+.main .item-container .item:nth-child(5) .item-image {
+    background-color: #78CEFF;
+}
+.main .item-container .item:nth-child(6) .item-image {
+    background-color: #7886FF;
+}
 .main .item-container .item .item-text {
     height: 30%;
     border-radius: 0 0 45px 45px;
@@ -240,4 +269,22 @@ header .head .nav-container .nav-item button:hover {
     color: #FFB100;
     text-align: right;
     margin: 25px 20px 10px 20px;
+}
+.main .pages {
+    margin: 0 auto;
+    width: 55vw;
+    display: flex;
+    justify-content: flex-end;
+}
+.main .pages > li {
+    margin: 0 10px;
+    font-size: 20px;
+    font-weight: 500;
+}
+.main .pages > li > a {
+    text-decoration: none;
+    color: #222;
+}
+.main .pages > li > a:hover {
+    color: #ffb100;
 }
