--- a/src/main/webapp/resources/css/pointLoad98.css
+++ b/src/main/webapp/resources/css/pointLoad98.css
@@ -14,6 +14,10 @@ body {
     width: 100%;
     padding: 0 20px 20px 30px;
 }
+.color-box {
+    background: #FFB100;
+    border-radius: 16px;
+}
 
 /* 헤더 */
 header .head {
@@ -64,6 +68,10 @@ header .head .nav-container .nav-item button:hover {
 }
 
 /* 프로필 */
+.profile {
+    width: 30%;
+    height: 100vh;
+}
 .profile .circle-container {
     width: 120px;
     height: 120px;
@@ -144,7 +152,7 @@ header .head .nav-container .nav-item button:hover {
     width: 35px;
     color: #ffb100;
 }
-.profile .category a .add-point {
+/* .profile .category a .add-point {
     background: #FFB100;
     border-radius: 50px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
@@ -154,6 +162,36 @@ header .head .nav-container .nav-item button:hover {
 .profile .category a .add-point:hover {
     background: transparent;
     border: 2px solid #ffb100;
+} */
+.profile .category .btn-container {
+    width: 340px;
+    display: flex;
+    justify-content: space-between;
+}
+.profile .category .btn-container a .btn {
+    width: 140px;
+    height: 60px;
+    padding: 0 10px;
+    background-color: #ffb100;
+    border: 2px solid #ffb100;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+}
+.profile .category .btn-container a .btn:hover {
+    background: transparent;
+    border: 2px solid #ffb100;
+}
+.profile .category .btn-container a .btn img {
+    width: 30px;
+    margin-right: 5px;
+}
+.profile .category .btn-container a .btn span {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
 }
 
 /* 컨텐츠 */
