--- a/src/main/webapp/resources/css/partyFindDetail99.css
+++ b/src/main/webapp/resources/css/partyFindDetail99.css
@@ -89,7 +89,7 @@ header .head .nav-container .nav-item button:hover {
 .img-bg {
     width: 30%;
     height: 75vh;
-    background: url(../resources/img/sun.jpeg) no-repeat center/cover;
+    background: url(../img/sun.jpeg) no-repeat center/cover;
     position: absolute;
     bottom: 0;
 }
@@ -108,6 +108,7 @@ header .head .nav-container .nav-item button:hover {
     z-index: 1;
 }
 .party-contents .party-contents-main {
+    z-index: 2;
     padding: 20px;
     position: absolute;
     left: 35%;
@@ -133,6 +134,7 @@ header .head .nav-container .nav-item button:hover {
     justify-content: flex-end;
 }
 .party-contents .btn-box button {
+	margin-left: 20px;
     width: 80px;
     height: 80px;
     padding: 5px;
