--- a/src/main/webapp/resources/css/partyPeople.css
+++ b/src/main/webapp/resources/css/partyPeople.css
@@ -103,12 +103,12 @@ header .head .nav-container .nav-item button:hover {
 }
 
 .people {
-  box-sizing: border-box;
   display: flex;
+  align-items: center;
   width: 700px;
-  height: 120px;
+  height: 130px;
   margin: 30px;
-  padding: 5px;
+  padding: 10px;
   background: #ffffff;
   box-shadow: 0px 0px 5px 5px #f0f0f0;
   border-radius: 10px;
@@ -131,4 +131,18 @@ li {
   font-size: 17px;
   font-weight: bold;
   margin: 5px 10px 10px 20px;
+}
+
+.profile {
+	width: 120px;
+	height: 120px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile img {
+	width: 90%;
+	overflow: hidden;
+	object-fit: cover;
 }
