--- a/src/main/webapp/resources/css/myFeed.css
+++ b/src/main/webapp/resources/css/myFeed.css
@@ -174,6 +174,7 @@ header .head .nav-container .nav-item button:hover {
 }
 .main .feeds .feed {
     margin: 30px 20px;
+    width: 360px;
 }
 .main .feeds .feed .feed-img {
     width: 360px;
