--- a/src/main/webapp/resources/css/partyCom5.css
+++ b/src/main/webapp/resources/css/partyCom5.css
@@ -57,8 +57,10 @@ h6 {
 .mainContent {
   margin: auto;
   width: 1200px;
+  height: 400px;
   display: flex;
   flex-wrap: wrap;
+  overflow: auto;
   align-items: center;
   border: 2px solid #000000;
 }
@@ -68,8 +70,8 @@ h6 {
   width: 235px;
   height: 250px;
   margin: 13px;
-  background: #d9d9d9;
-  border: 2px solid #000000;
+  background: #f2f2f2;
+  border: 2px solid #222;
   border-radius: 5px;
   bottom: 10px;
 }
@@ -83,13 +85,18 @@ h6 {
 .create {
   width: 120px;
   height: 50px;
-  background: #d9d9d9;
+  background: white;
+  box-shadow: 0px 2px 2px 2px #d9d9d9;
   border: none;
   border-radius: 30px;
   font-size: 17px;
   font-weight: bold;
   margin: 10px 0px;
   float: right;
+}
+
+.create:hover{
+	background-color: #ffb100;
 }
 
 .btnClass {
@@ -189,6 +196,7 @@ header .head .nav-container .nav-item button:hover {
   width: 800px;
   height: 500px;
   background: #fff;
+  text-align: center;
   margin: auto;
   z-index: 1000;
   border-radius: 15px;
@@ -202,8 +210,8 @@ header .head .nav-container .nav-item button:hover {
 
 textarea {
   padding: 15px;
-  width: 100%;
-  height: 23em;
+  width: 90%;
+  height: 20em;
   margin-top: 20px;
   border: none;
   resize: none;
@@ -213,10 +221,31 @@ textarea {
   right: 15px;
   bottom: 8px;
   position: absolute;
-  width: 150px;
+  width: 120px;
   height: 50px;
-  background: #bfbfbf;
+  background: #222;
   color: #fff;
   border-radius: 10px;
   border: none;
+}
+
+.modal-input{
+	margin: auto;
+	justify-content: space-around;
+}
+
+
+.modal-title input{
+	border: 2px solid #222;
+	border-radius: 20px;
+	margin: 20px;
+	width: 500px;
+	height:40px;
+	text-align: center;
+}
+
+.modal-wrap hr{
+	margin: 5px;
+	height: 10px;
+	
 }
