마이피드, 프로필 페이지 css 수정

--- a/src/main/webapp/resources/css/myFeed.css
+++ b/src/main/webapp/resources/css/myFeed.css
@@ -168,7 +168,7 @@ header .head .nav-container .nav-item button:hover {
 }
 .profile .signal .signal-container {
     margin: 10px 0;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
